--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "redux": "^4.2.0",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.53.0"
   },
   "devDependencies": {
