--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
