--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-range": "^1.8.13",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
+    "react-spinners": "^0.13.3",
     "redux": "^4.1.2",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.9",
